Added Map jQuery, modified and cleaned resumebuilder.js & index, changed class names in css file to more appropriate titles for colors

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link href="css/style.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   <script src="http://maps.googleapis.com/maps/api/js?libraries=places"></script>
-
+  <script src="http://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyAr14XOTna1F-D2pS26qns5EBSXjvdraTM"></script>
   <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body>
@@ -52,7 +52,7 @@
     <div id="mapDiv">
       <h2>Where I've Lived and Worked</h2>
     </div>
-    <div id="lets-connect" class="dark-gray">
+    <div id="lets-connect" class="light-blue">
       <h2 class="orange center-text">Let's Connect</h2>
         <ul id="footerContacts" class="flex-box">
       </ul>
