Fixed projects and maps sections to display properly, edited summary section to append from JS file

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <!-- Load the page styles. -->
   <link href="css/style.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-  <script src="http://maps.googleapis.com/maps/api/js?libraries=places"></script>
   <script src="http://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyAr14XOTna1F-D2pS26qns5EBSXjvdraTM"></script>
   <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
@@ -30,15 +29,6 @@
     <div style="clear: both;"></div>
     <div id="summary">
       <h2>Summary</h2>
-      <p>
-        I am an up and coming web designer/developer, looking to make my mark in the tech platform.
-        <br>
-        <br>
-        My goals are to fully design and implement strategies in my UX courses to assist in the development of E-Commerce Sites, Blogs, and other businesses/individuals to use their sites to their full potential.
-        <br>
-        <br>
-        I also eventually plan to own a digital media/marketing business and an E-Commerce business which I want to fully develop and run myself.
-      </p>
     </div>
     <div id="workExperience" class="gray">
       <h2>Work Experience</h2>
@@ -53,7 +43,7 @@
       <h2>Where I've Lived and Worked</h2>
     </div>
     <div id="lets-connect" class="light-blue">
-      <h2 class="orange center-text">Let's Connect</h2>
+      <h2 class="dark center-text">Let's Connect</h2>
         <ul id="footerContacts" class="flex-box">
       </ul>
     </div>
