Beautified code and made formatting changes to the Education Section

--- a/index.html
+++ b/index.html
@@ -1,82 +1,83 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <!-- This tells the browser how to read the document. -->
-  <meta charset="utf-8">
-  <!-- Tells the browser what the title of this page should be. -->
-  <title>Julius Vergara Web Development Resume</title>
-  <!-- Load the page styles. -->
-  <link href="css/style.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-  <script src="http://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyAr14XOTna1F-D2pS26qns5EBSXjvdraTM"></script>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+    <!-- This tells the browser how to read the document. -->
+    <meta charset="utf-8">
+    <!-- Tells the browser what the title of this page should be. -->
+    <title>Julius Vergara Web Development Resume</title>
+    <!-- Load the page styles. -->
+    <link href="css/style.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+    <script src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyAr14XOTna1F-D2pS26qns5EBSXjvdraTM"></script>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
+
 <body>
-  <div id="main">
-    <div id="header" class="center-content clear-fix">
-      <ul id="topContacts" class="flex-box"></ul>
+    <div id="main">
+        <div id="header" class="center-content clear-fix .expand-header">
+            <ul id="topContacts" class="flex-box"></ul>
+        </div>
+        <nav id="nav-bar" class="fixed-nav">
+            <ul id="nav-menu">
+                <li><a class="nav-item" href="#workExperience">WORK</a>
+                </li>
+                <li><a class="nav-item" href="#projects">PROJECTS</a>
+                </li>
+                <li><a class="nav-item" href="#education">EDUCATION</a>
+                </li>
+            </ul>
+        </nav>
+        <div style="clear: both;"></div>
+        <div id="summary">
+            <h2>Summary</h2>
+        </div>
+        <div id="workExperience" class="gray">
+            <h2>Work Experience</h2>
+        </div>
+        <div id="projects">
+            <h2>Projects</h2>
+        </div>
+        <div id="education" class="gray">
+            <h2>Education</h2>
+        </div>
+        <div id="mapDiv">
+            <h2>Where I've Lived and Worked</h2>
+        </div>
+        <div id="lets-connect" class="light-blue">
+            <h2 class="dark center-text">Let's Connect</h2>
+            <ul id="footerContacts" class="flex-box">
+            </ul>
+        </div>
     </div>
-    <nav id="nav-bar">
-      <ul id="nav-menu">
-        <li><a class="nav-item" href="#workExperience">WORK</a>
-        </li>
-        <li><a class="nav-item" href="#projects">PROJECTS</a>
-        </li>
-        <li><a class="nav-item" href="#education">EDUCATION</a>
-        </li>
-      </ul>
-    </nav>
-    <div style="clear: both;"></div>
-    <div id="summary">
-      <h2>Summary</h2>
-    </div>
-    <div id="workExperience" class="gray">
-      <h2>Work Experience</h2>
-    </div>
-    <div id="projects">
-      <h2>Projects</h2>
-    </div>
-    <div id="education" class="gray">
-      <h2>Education</h2>
-    </div>
-    <div id="mapDiv">
-      <h2>Where I've Lived and Worked</h2>
-    </div>
-    <div id="lets-connect" class="light-blue">
-      <h2 class="dark center-text">Let's Connect</h2>
-        <ul id="footerContacts" class="flex-box">
-      </ul>
-    </div>
-  </div>
 
-  <script src="js/jQuery.js"></script>
-  <script src="js/helper.js"></script>
-  <script src="js/resumeBuilder.js"></script>
+    <script src="js/jQuery.js"></script>
+    <script src="js/helper.js"></script>
+    <script src="js/resumeBuilder.js"></script>
 
-  <script>
-
-    if(document.getElementsByClassName('flex-item').length === 0) {
-      document.getElementById('topContacts').style.display = 'none';
-    }
-    if(document.getElementsByTagName('h1').length === 0) {
-      document.getElementById('header').style.display = 'none';
-    }
-    if(document.getElementsByClassName('work-entry').length === 0) {
-      document.getElementById('workExperience').style.display = 'none';
-    }
-    if(document.getElementsByClassName('project-entry').length === 0) {
-      document.getElementById('projects').style.display = 'none';
-    }
-    if(document.getElementsByClassName('education-entry').length === 0) {
-      document.getElementById('education').style.display = 'none';
-    }
-    if(document.getElementsByClassName('flex-item').length === 0) {
-      document.getElementById('lets-connect').style.display = 'none';
-    }
-    if(document.getElementById('map') === null) {
-      document.getElementById('mapDiv').style.display = 'none';
-    }
-  </script>
+    <script>
+        if (document.getElementsByClassName('flex-item').length === 0) {
+            document.getElementById('topContacts').style.display = 'none';
+        }
+        if (document.getElementsByTagName('h1').length === 0) {
+            document.getElementById('header').style.display = 'none';
+        }
+        if (document.getElementsByClassName('work-entry').length === 0) {
+            document.getElementById('workExperience').style.display = 'none';
+        }
+        if (document.getElementsByClassName('project-entry').length === 0) {
+            document.getElementById('projects').style.display = 'none';
+        }
+        if (document.getElementsByClassName('education-entry').length === 0) {
+            document.getElementById('education').style.display = 'none';
+        }
+        if (document.getElementsByClassName('flex-item').length === 0) {
+            document.getElementById('lets-connect').style.display = 'none';
+        }
+        if (document.getElementById('map') === null) {
+            document.getElementById('mapDiv').style.display = 'none';
+        }
+    </script>
 </body>
-</html>
 
+</html>
